--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <org.lazysource.uberprogressview.UberProgressView
+    <in.ishankhanna.UberProgressView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
